add game connection gui